<resources>
    <string name="app_name">Dog Care</string>
    <string name="splash_icon_description">Dog Care paw icon</string>
    <string name="events">Events</string>
    <string name="fab_description">Add New Event Floating Action Button</string>
    <string name="new_event">New Event</string>
    <string name="save">Save</string>
    <string name="dog_name_hint">Dog Name</string>
    <string name="event_type_hint">Event</string>
    <string name="event_date_hint">Date</string>
    <string name="event_time_hint">Time</string>
    <string name="event_notes_hint">Notes (Optional)</string>\
    <string-array name="events_array">
        <item>Pooped</item>
        <item>Peed</item>
        <item>Walked</item>
        <item>Fed</item>

    </string-array>
</resources>