<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/dogNameEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_event_text_height"
        android:paddingStart="@dimen/new_event_text_paddingStart"
        android:paddingEnd="@dimen/new_event_text_paddingStart"
        android:background="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/dog_name_hint" />

    <EditText
        android:id="@+id/eventTypeEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_event_text_height"
        android:paddingStart="@dimen/new_event_text_paddingStart"
        android:paddingEnd="@dimen/new_event_text_paddingStart"
        android:layout_below="@id/dogNameEditText"
        android:background="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/event_type_hint" />

    <TextView
        android:id="@+id/eventDateTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_event_text_height"
        android:layout_below="@id/eventTypeEditText"
        android:background="@null"
        android:hint="@string/event_date_hint"
        android:paddingStart="@dimen/new_event_text_paddingStart"
        android:paddingEnd="@dimen/new_event_text_paddingStart"
        android:paddingTop="@dimen/new_event_text_paddingTop"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/eventTimeTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_event_text_height"
        android:paddingStart="@dimen/new_event_text_paddingStart"
        android:paddingEnd="@dimen/new_event_text_paddingStart"
        android:paddingTop="@dimen/new_event_text_paddingTop"
        android:layout_below="@id/eventDateTextView"
        android:background="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/event_time_hint" />

    <EditText
        android:id="@+id/eventNotesEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_event_text_height"
        android:paddingStart="@dimen/new_event_text_paddingStart"
        android:paddingEnd="@dimen/new_event_text_paddingStart"
        android:layout_below="@id/eventTimeTextView"
        android:background="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/event_notes_hint" />

    <Button
        android:id="@+id/newEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventNotesEditText"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray" />

</RelativeLayout>